Higher res 40px logo, fix contact page on mobile

--- a/SterreFenna.WebPresentation/Content/less/menu.less
+++ b/SterreFenna.WebPresentation/Content/less/menu.less
@@ -92,7 +92,10 @@
         display: table-cell;
         height: 40px;
         vertical-align: middle;
-        //margin: auto;
+
+        img{
+            height:40px;
+        }
     }
 
     .responsive__contact {
@@ -231,31 +234,29 @@
     }
 }
 
+.socialmediabar {
+    margin-top: 20px;
+    text-align: center;
+    display: block;
 
+    & > img {
+        height: 30px;
+    }
+
+    .space-right-30 {
+        margin-right: 30px;
+    }
+
+    .title {
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+}
 
 @media (min-width: @screen-xs) {
     .main-menu {
         //padding: 5px 30px 5px 30px;
         font-size: 14px;
-    }
-
-    .socialmediabar {
-        margin-top:20px;
-        text-align: center;
-        display: block;
-
-        & > img {
-            height: 30px;
-        }
-
-        .space-right-30{
-            margin-right:30px;
-        }
-
-        .title{
-            text-transform:uppercase;
-            margin-bottom:20px;
-        }
     }
 }
 
