--- a/SterreFenna.WebPresentation/Content/minifiedbundle.css
+++ b/SterreFenna.WebPresentation/Content/minifiedbundle.css
@@ -7495,6 +7495,9 @@ address {
   height: 40px;
   vertical-align: middle;
 }
+.main-menu .responsive__logo img {
+  height: 40px;
+}
 .main-menu .responsive__contact {
   width: 50px;
   height: 50px;
@@ -7628,24 +7631,24 @@ address {
   color: #808080;
   text-decoration: none;
 }
+.socialmediabar {
+  margin-top: 20px;
+  text-align: center;
+  display: block;
+}
+.socialmediabar > img {
+  height: 30px;
+}
+.socialmediabar .space-right-30 {
+  margin-right: 30px;
+}
+.socialmediabar .title {
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
 @media (min-width: 480px) {
   .main-menu {
     font-size: 14px;
-  }
-  .socialmediabar {
-    margin-top: 20px;
-    text-align: center;
-    display: block;
-  }
-  .socialmediabar > img {
-    height: 30px;
-  }
-  .socialmediabar .space-right-30 {
-    margin-right: 30px;
-  }
-  .socialmediabar .title {
-    text-transform: uppercase;
-    margin-bottom: 20px;
   }
 }
 @media (min-width: 992px) {
